--- a/Valera/index.html
+++ b/Valera/index.html
@@ -73,9 +73,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links d-flex align-items-center">
-        <a href="" class="facebook"><i class="bi bi-facebook"></i></a>
+        <!--<a href="" class="facebook"><i class="bi bi-facebook"></i></a>--->
         <a href="https://www.linkedin.com/in/again-affiliates-383b48292" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-        <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/refurbishradar/" class="instagram"><i class="bi bi-instagram"></i></a>
 
         
       </div>
