--- a/Valera/index.html
+++ b/Valera/index.html
@@ -6,9 +6,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>RefurbishRadar</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Digital Marketing Services for Home Improvement Businesses - RefurbishRadar</title>
+
+  <meta content="Explore home improvement and digital marketing services in Kathmandu. We offer TikTok and Facebook Ads, website design, and more for local home improvement businesses." name="description">
+  <meta content="Digital Advertising, Online Marketing, Facebook Ads, TikTok Ads, PPC Campaigns, Digital Marketing Solutions, Kathmandu Advertising,Facebook ads Kathmandu, TikTok ads Kathmandu, Home Improvement Kathmandu,  Home Improvement Consultation Kathmandu, Digital Marketing for Home Improvement, Home Improvement Trends Nepal" name="keywords">
+
+
 
   <!-- Favicons -->
   <link href="assets/img/icons8-radar-100 (1).png" rel="icon">
@@ -96,6 +99,8 @@
         <div class="row content">
           <div class="col-lg-6">
             
+            <p><h7>Digital Marketing Solutions for Local Home Improvement Businesses in Kathmandu.</h7></p>
+
             <ul>
               <li><i class="ri-check-double-line"></i> Targeted Campaigns: Our team crafts precise ad campaigns to reach your ideal customers</li>
               <li><i class="ri-check-double-line"></i> Online Presence: We establish a robust online platform for customer engagement and growth</li>
@@ -403,7 +408,8 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>RefurbishRadar</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>RefurbishRadar </span></strong>. All Rights Reserved
+        <p><h7>- Digital Marketing Agency for Home Improvement Businesses in Kathmandu</h7></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
