--- a/Valera/index.html
+++ b/Valera/index.html
@@ -389,7 +389,8 @@
 
         <div class="row footer-newsletter justify-content-center">
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form action="https://formspree.io/f/moqopyaa" method="post">
+            
               <input type="email" name="email" placeholder="Enter your Email"><input type="submit" value="Subscribe">
             </form>
           </div>
